--- a/resources.qrc
+++ b/resources.qrc
@@ -1,10 +1,10 @@
 <!DOCTYPE RCC><RCC version="1.0">
     <qresource>
-        <file>images/copy.png</file>
-        <file>images/cut.png</file>
-        <file>images/new.png</file>
-        <file>images/open.png</file>
-        <file>images/save.png</file>
-        <file>images/close.png</file>
+        <file>Images/copy.png</file>
+        <file>Images/cut.png</file>
+        <file>Images/new.png</file>
+        <file>Images/open.png</file>
+        <file>Images/save.png</file>
+        <file>Images/close.png</file>
     </qresource>
 </RCC>
